--- a/.github/workflows/build-binary-signed-ghat-malicious.yml
+++ b/.github/workflows/build-binary-signed-ghat-malicious.yml
@@ -25,7 +25,7 @@ jobs:
 #          ...
 #
 #      - name: Sign artifact
-#        uses: github-early-access/generate-build-provenance@main
+#        uses: actions/attest-build-provenance@v1.0.0
 #        with:
 #          subject-path: '${{ github.workspace }}/demo-repo-go-binary'
 #
