--- a/.github/workflows/build-binary-signed-ghat.yml
+++ b/.github/workflows/build-binary-signed-ghat.yml
@@ -9,6 +9,8 @@ jobs:
       id-token: write
       packages: write
       contents: write
+      attestations: write
+
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -21,7 +23,7 @@ jobs:
 #          ...
 #
 #      - name: Sign artifact
-#        uses: actions/attest-build-provenance@v1.0.0
+#        uses: actions/attest-build-provenance@v1.4.1
 #        with:
 #          subject-path: '${{ github.workspace }}/demo-repo-go-binary'
 #
